Revise Client Policies Codes - ClientPoliciesExtendedEventTest
closes #39982

Signed-off-by: Takashi Norimatsu <takashi.norimatsu.ws@hitachi.com>